--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1154,12 +1154,12 @@ pre[class*=" language-"] {
 
 @media (min-width: 768px) {
   ._demo--container {
-    width: 1760px;
+    width: 90%px;
     margin: 0rem auto; } }
 
 @media (min-width: 1200px) {
   ._demo--container {
-    width: 992px;
+    width: 90%px;
     margin: 0rem auto; } }
 
 ._demo--heading {
